--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-6">
+            <div id="maincontent" class="col-md-6">
                 <h2 id="question"></h2>
-                <button class="answers" id="0"></button>
-                <button class="answers" id="1"></button>
-                <button class="answers" id="2"></button>
-                <button class="answers" id="3"></button>
+                <button class="answers" id="a"></button>
+                <button class="answers" id="b"></button>
+                <button class="answers" id="c"></button>
+                <button class="answers" id="d"></button>
+                <div id="showanswer"></div>
+                <button class="restart">Restart</button>
+                <button class="start">Start</button>
             </div>
             <div class="col-md-6">
                 <h3 id="timer"></h3>
